<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.animepopular.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_homeFragment_to_languageFragment"
            app:destination="@id/languageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.animepopular.ui.detail.DetailFragment"
        android:label="@string/label_detail"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="anime"
            app:argType="com.example.animepopular.model.AnimeItem" />
    </fragment>

    <fragment
        android:id="@+id/languageFragment"
        android:name="com.example.animepopular.ui.language.LanguageFragment"
        android:label="@string/label_language"
        tools:layout="@layout/fragment_language" />

</navigation>